<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/text_view_header_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_user_name"
            android:layout_width="@dimen/edit_text_user_input_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_user_name"
            android:inputType="text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/text_view_header_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="@dimen/edit_text_user_input_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_id"
            android:textSize="@dimen/text_view_header_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="@dimen/edit_text_user_input_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/hint_enter_your_email_id"
            android:inputType="textEmailAddress" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone No"
            android:textSize="@dimen/text_view_header_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/et_phone_no"
            android:layout_width="@dimen/edit_text_user_input_width"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:hint="@string/enter_your_phone_no"
            android:inputType="phone" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvAlreadyUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_user_login_here"
        android:textColor="#3F51B5"
        android:textSize="@dimen/already_user"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.948" />

    <Button
        android:id="@+id/bSingup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:text="@string/singup"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/tvAlreadyUser"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>